<resources>
    <string name="app_name">WeatherApp</string>
    <string name="show_weather_dialog">show weather dialog</string>
    <string name="location">Location:</string>
    <string name="location_hint">36.96,-122.02 or london</string>
    <string name="dialog_ok">OK</string>
    <string name="bottom_menu_words">words</string>
    <string name="bottom_menu_dictionary">dictionary</string>
    <string name="bottom_menu_settings">settings</string>


    <string name="bluetooth_device_title">Bluetooth Device Title</string>
    <string name="bluetooth_device_subtitle">11:22:33:44:55:66:77</string>
    <string name="fragment_discover_devices">Start track devices</string>
    <string name="fragment_stop_discover_devices">Stop track devices</string>

    <string name="connect_to_device">connect to device</string>
    <string name="server_is_started">server is working</string>

    <string name="discover_services">Discover services</string>
    <string name="start_service">Start BLE server</string>
    <string name="service_title">Title</string>
    <string name="system_time">Time</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_device_name">Device name:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
</resources>
